name:                wordchain
version:             0.1.0.0
synopsis:            interview puzzle
description:         word chain program
homepage:            https://github.com/nineonine/wordchain#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Dudarenko
maintainer:          mail4chemik@gmail.com
copyright:           2018 nineonine
category:            interview puzzle
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wordchain
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -funfolding-use-threshold=16
  other-modules:       Library
                    ,  Program
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  bytestring
                    ,  bytestring-trie
